objects/vlocity_ins__FinancialSecurityPosition__c.object
<CustomObject>
    <description>DEPRECATED. Use Security Position (AssetSecurityPosition__c) instead. Represents an investment holding of some security within a financial account.</description>
    <fields>
        <fullName>vlocity_ins__FinancialAccountId__c</fullName>
        <description>Parent financial account</description>
        <label>Financial Account</label>
        <referenceTo>vlocity_ins__FinancialAccount__c</referenceTo>
        <relationshipLabel>Security Positions</relationshipLabel>
        <relationshipName>Financial_Account_Holdings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfShares__c</fullName>
        <description>The quantity of shares held</description>
        <label>Share</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Security Positions</relationshipLabel>
        <relationshipName>SecurityPositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Security for this holding</description>
        <label>Security</label>
        <referenceTo>vlocity_ins__FinancialSecurity__c</referenceTo>
        <relationshipLabel>Security Positions</relationshipLabel>
        <relationshipName>FinancialSecurityPosition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityName__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;vlocity_ins__SecurityId__c,vlocity_ins__SecurityId__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityPriceAsOfDate__c</fullName>
        <formula>vlocity_ins__SecurityId__r.vlocity_ins__PriceAsOfDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityPrice__c</fullName>
        <formula>vlocity_ins__SecurityId__r.vlocity_ins__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TickerSymbol__c</fullName>
        <formula>vlocity_ins__SecurityId__r.vlocity_ins__TickerSymbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <formula>vlocity_ins__NumberOfShares__c  *  vlocity_ins__SecurityPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Account Security Position</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Account Security Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>